--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.a300cemassignment">
 
+    <uses-permission android:name="android.permission.USE_BIOMETRIC"/>
+
+
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
